[project]
name = "brazilian-houses-to-rent"
version = "0.1.0"
description = ""
authors = [
    {name = "Rymdao",email = "mesbah.rochdi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "skimpy (>=0.0.19,<0.0.20)",
    "missingno (>=0.5.2,<0.6.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "dfsummary (>=0.4,<0.5)",
    "skim (>=1.2,<2.0)",
    "summarytools (>=0.3.0,<0.4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
